# strata-documentai-api-enterprise

./: .gitleaks.toml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  code.json
documentai-api/: .gitignore  Dockerfile  Dockerfile.lambda  Makefile  README.md  docker-compose.yml  local.env.example  pyproject.toml  tasks.py
documentai-api/src/documentai_api/: annotations.py  app.py  app_admin.py  app_admin_documents.py  app_admin_usage.py  app_api_keys.py  app_audit_log.py  app_auth_events.py  app_batch.py  app_blueprint_test.py  app_build.py  app_demo.py  app_dictionary.py  app_document_categories.py  app_documents.py  app_extraction_rules.py  app_me.py  app_metrics.py  app_presigned.py  app_tenants.py  app_users.py
documentai-api/tests/: conftest.py  test_app.py  test_app_admin_documents.py  test_app_admin_rbac.py  test_app_admin_rbac_shared.py  test_app_admin_rbac_super_admin.py  test_app_admin_rbac_tenant_admin.py  test_app_admin_usage.py  test_app_audit_log.py  test_app_auth.py  test_app_auth_events.py  test_app_batch.py  test_app_build.py  test_app_demo.py  test_app_dictionary.py  test_app_document_categories.py  test_app_documents.py  test_app_extraction_rules.py  test_app_presigned.py
documentai-api/tests/e2e/: conftest.py
documentai-api/tests/jobs/: test_bda_result_processor_job.py  test_document_processor_job.py  test_handlers.py  test_metrics_aggregator_job.py  test_metrics_processor_job.py  test_usage_report_job.py
documentai-api/tests/services/: test_bda_service.py  test_bedrock_service.py
documentai-api/tests/utils/: test_audit.py  test_auth_util.py  test_aws_client_factory_util.py  test_batch_operations.py  test_bda_invoker_util.py  test_bda_output_processor_util.py  test_bda_util.py  test_bedrock_preclassification.py  test_dates_util.py  test_ddb_util.py  test_document_build_util.py  test_document_lifecycle.py  test_env_util.py  test_extraction_rules.py  test_extraction_timing.py  test_field_labels.py  test_image_optimization.py  test_json_parsing.py  test_jwt_auth.py  test_metrics_util.py  test_response_builder_util.py  test_s3_util.py  test_schemas_util.py  test_ssm_util.py  test_strings.py  test_tenant.py  test_tenants.py  test_textract_mappings.py  test_textract_util.py  test_uploads_util.py
infra/: .gitignore  Makefile  README.md  manifest.json  pyproject.toml  validate_infra.py
infra/custom-document-types/court_ordered_benefits/: custom-alimony-decree.json  custom-child-support-document.json
infra/custom-document-types/employment_wages/: custom-new-hire-form.json
infra/custom-document-types/government_benefits/: custom-school-financial-aid-award.json  custom-social-security-verification.json  custom-unemployment-insurance-claim.json  custom-va-benefit-letter.json
infra/custom-document-types/independent_earnings/: custom-royalty-statement.json
infra/custom-document-types/private_benefits_and_settlements/: custom-annuity-statement.json  custom-household-contribution-statement.json  custom-insurance-company-letter.json  custom-pension-verification.json
infra/environments/dev/: backend.tf  main.tf  outputs.tf  terraform.tfvars  variables.tf
infra/modules/analytics/: main.tf  outputs.tf  variables.tf
infra/modules/api-gateway/: main.tf  outputs.tf  variables.tf
infra/modules/config/: main.tf  outputs.tf  variables.tf
infra/modules/container-image-repository/: main.tf  outputs.tf  variables.tf
infra/modules/document-data-extraction/: main.tf  outputs.tf  variables.tf  versions.tf
infra/modules/identity-provider/: main.tf  outputs.tf  variables.tf  versions.tf
infra/modules/monitoring/: README.md  alarms.tf  dashboard.tf  main.tf  outputs.tf  variables.tf
infra/modules/networking/: main.tf
infra/modules/nosql/: main.tf  outputs.tf  variables.tf
infra/modules/queue/: main.tf  outputs.tf  variables.tf
infra/modules/secrets/: main.tf  outputs.tf  variables.tf  versions.tf
infra/validators/: README.md  __init__.py  __main__.py  analytics.py  api_gateway.py  bedrock.py  cognito.py  constants.py  discovery.py  dynamodb.py  ecr.py  generate.py  iam.py  lambda_.py  logs.py  monitoring.py  s3.py  sqs.py  ssm.py  tf.py  triggers.py
(+371 files in other folders)
