[project]
name = "documentai-api"
version = "0.1.0"
description = "DocumentAI API"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
  "boto3>=1.34.0",
  "fastapi>=0.104.0",
  "python-multipart>=0.0.6",
  "uvicorn>=0.24.0",
  "filetype>=1.2.0",
  "pypdf>=3.17.4",
  "typer>=0.16.0",
  "click>=8.1,<8.5",
  "tenacity>=8.2.0",
  "pyjwt[crypto]>=2.8.0",
  "pydantic-settings>=2.0.3",
  "pillow>=12.2.0",
  "pillow-heif>=0.18.0",
  "mangum>=0.19.0",
  "awslambdaric>=3.0.0; sys_platform == 'linux'",
  "python-ulid>=3.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-cov>=4.1.0",
  "pytest-mock>=3.11.0",
  "pytest-xdist>=3.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-rerunfailures>=11.0",
  "ruff>=0.1.0",
  "httpx>=0.24.0",
  "moto[all]>=4.2.0",
  "freezegun>=1.2.0",
  "mypy>=1.20.0",
  "boto3-stubs[s3,dynamodb,bedrock,bedrock-runtime,bedrock-data-automation,bedrock-data-automation-runtime,sqs,athena,ssm,cognito-idp]>=1.38.0",
]

[project.scripts]
documentai_api = "documentai_api.main:main"
bda_result_processor = "documentai_api.jobs.bda_result_processor.main:app"
document_processor = "documentai_api.jobs.document_processor.main:app"
metrics_processor = "documentai_api.jobs.metrics_processor.cli:app"
metrics_aggregator = "documentai_api.jobs.metrics_aggregator.cli:app"
usage_report = "documentai_api.jobs.usage_report.cli:app"
export-openapi = "documentai_api.cli.export_openapi:app"
api-keys = "documentai_api.cli.api_keys:app"
tenants = "documentai_api.cli.tenants:app"
pull-blueprint-fields = "documentai_api.cli.pull_blueprint_fields:app"

[tool.mypy]
pretty = true
show_error_context = true
strict = true
enable_error_code = ["ignore-without-code", "exhaustive-match"]
plugins = ["pydantic.mypy"]
# prep for mypy 2.0
local_partial_types = true
allow_redefinition_new = true
strict_bytes = true

[tool.ruff]
line-length = 100
# see docs at https://docs.astral.sh/ruff/rules
lint.select = [
    # flake8-bugbear
    "B",
    # pydocstyle
    "D", "D404",
    # pycodestyle, ones that don't deal with formatting
    "E4", "E7", "E9",
    # Pyflakes
    "F",
    # FastAPI
    "FAST",
    # refurb
    "FURB",
    # isort
    "I",
    # flake8-no-pep420
    "INP",
    # pep8-naming
    "N",
    # perflint
    "PERF",
    # flake8-pytest-style
    "PT",
    # ruff stuff
    "RUF",
    # flake8-simplify
    "SIM",
    # flake8-debugger
    "T10",
    # pyupgrade
    "UP",
]
lint.ignore = [
    # don't require *every* public thing to have a docstring
    "D1",
    # some params are obvious
    "D417",
    # preserve even simple if-else blocks
    "SIM108",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
]

[tool.pytest.ini_options]
addopts = "-m 'not audit and not integration and not e2e'"
markers = [
    "audit: mark a test as a security audit log test, to be run isolated from other tests",
    "integration: tests that use moto or real external services",
    "e2e: end-to-end tests against real deployed AWS infrastructure (require .env.e2e)",
]

[build-system]
requires = ["uv_build>=0.9.28,<0.12.0"]
build-backend = "uv_build"
