[project]
name = "docai-infra-validators"
version = "0.1.0"
description = "Infrastructure drift validation for DocumentAI"
requires-python = ">=3.11"

dependencies = [
  "boto3>=1.34.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.1.0",
  "pytest>=7.0.0",
  "pytest-mock>=3.11.0",
  "moto[all]>=4.2.0",
]

[project.scripts]
infra-check = "validators.__main__:main"
infra-generate = "validators.generate:main"

[tool.ruff]
line-length = 100
lint.select = [
    "B",
    "E4", "E7", "E9",
    "F",
    "I",
    "N",
    "PERF",
    "RUF",
    "SIM",
    "UP",
]
lint.ignore = [
    "SIM108",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["validators"]
